<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        >
        <TextView
            android:id="@+id/tv_jifen1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jifen_tv1"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tv_jifen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jifen_tv2"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_jifen1"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/view_jifen"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:background="@drawable/jifen_corner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        >
        <TextView
            android:id="@+id/tv_jifen3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jifen_tv3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="45dp"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:background="@color/colorlightGray"
            />
        <TextView
            android:id="@+id/tv_jifen4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jifen_tv4"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="45dp"
            />
    </RelativeLayout>



</RelativeLayout>