<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mine_all_setting"
    >
    <RelativeLayout
    android:id="@+id/relativelayout_jifen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/jifen"
        style="@style/Mine_setting_img"
        android:layout_alignBottom="@id/tv_mine_jifen"
        />
    <TextView
        android:id="@+id/tv_mine_jifen"
        android:text="@string/mine_jifen"
        style="@style/Mine_setting_text"
        />
    <com.example.demo.IconFont.FontIconView
        style="@style/Mine_setting_arrow"
        android:text="@string/mine_img_arrowToRight"
        android:layout_alignBottom="@id/tv_mine_jifen"
        />
    <View
        style="@style/Mine_setting_line"
        android:layout_below="@id/tv_mine_jifen"
        />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativelayout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <ImageView
            android:src="@drawable/info"
            style="@style/Mine_setting_img"
            android:layout_alignBottom="@id/tv_mine_info" />
        <TextView
            android:id="@+id/tv_mine_info"
            android:text="@string/mine_info"
            style="@style/Mine_setting_text"
            />
        <com.example.demo.IconFont.FontIconView
            style="@style/Mine_setting_arrow"
            android:text="@string/mine_img_arrowToRight"
            android:layout_alignBottom="@id/tv_mine_info"
            />
        <View
            style="@style/Mine_setting_line"
            android:layout_below="@id/tv_mine_info"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativelayout_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <ImageView
            android:src="@drawable/setting"
            style="@style/Mine_setting_img"
            android:layout_alignBottom="@id/tv_mine_setting" />
        <TextView
            android:id="@+id/tv_mine_setting"
            android:text="@string/mine_setting"
            style="@style/Mine_setting_text"
            />
        <com.example.demo.IconFont.FontIconView
            style="@style/Mine_setting_arrow"
            android:text="@string/mine_img_arrowToRight"
            android:layout_alignBottom="@id/tv_mine_setting"
            />
        <View
            style="@style/Mine_setting_line"
            android:layout_below="@id/tv_mine_setting"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativelayout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <ImageView
            android:src="@drawable/about"
            style="@style/Mine_setting_img"
            android:layout_alignBottom="@id/tv_mine_about" />
        <TextView
            android:id="@+id/tv_mine_about"
            android:text="@string/mine_about"
            style="@style/Mine_setting_text"
            />
        <com.example.demo.IconFont.FontIconView
            style="@style/Mine_setting_arrow"
            android:text="@string/mine_img_arrowToRight"
            android:layout_alignBottom="@id/tv_mine_about"
            />
        <View
            style="@style/Mine_setting_line"
            android:layout_below="@id/tv_mine_about"
            />
    </RelativeLayout>


</LinearLayout>