<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:elevation="5dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/string_shou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/mine_card"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/mine_img_collection"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/string_shou"
            android:src="@drawable/collection" />

        <TextView
            android:id="@+id/string_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/string_shou"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/mine_card_num"
            android:textColor="@color/colorRedNum"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/string_shou"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/string_num1"
            android:text="@string/mine_card_desc"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>