<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/person_setting1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:background="#FFF">
        <LinearLayout
            android:id="@+id/personal_set_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/Personal_setting_textRight"
                />
            <TextView
                style="@style/Personal_setting_textLeft"
                android:text="@string/personal_set_id"
                />
            <TextView
                android:id="@+id/tv_ID"
                style="@style/Personal_setting_birthdate"
                />
        </LinearLayout>
        <View
           style="@style/Personal_set_line"/>
        <LinearLayout
            android:id="@+id/personal_set_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/Personal_setting_textRight"
                />
            <TextView
                style="@style/Personal_setting_textLeft"
                android:text="@string/personal_set_name"
                />
            <EditText
                android:id="@+id/tv_person_name"
                style="@style/Personal_setting_birthdate"
                />
        </LinearLayout>
        <View
            style="@style/Personal_set_line"/>
        <LinearLayout
            android:id="@+id/personal_set_sex"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/Personal_setting_textRight"
                />
            <TextView
                style="@style/Personal_setting_textLeft"
                android:text="@string/personal_set_gender"
                />
            <TextView
                android:id="@+id/tv_sex"
                style="@style/Personal_setting_birthdate"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>